building products section

--- a/index.html
+++ b/index.html
@@ -244,14 +244,27 @@
           <div class="tabs products__tabs">
             <a href="#" class="tab tab--active products__tab">Spare parts</a>
             <a href="#" class="tab tab--active products__tab">Engines</a>
-            <a href="#" class="tab tab--active products__tab">Tires/a>
+            <a href="#" class="tab tab--active products__tab">Tires</a>
             <a href="#" class="tab tab--active products__tab">Electronics</a>
             <a href="#" class="tab tab--active products__tab">Tools</a>
             <a href="#" class="tab tab--active products__tab">Accessories</a>
           </div>
           <div class="tabs-container products__container">
             <div class="tabs-content products__content tabs-content--active"></div>
-            <div class="tabs-content products__content"></div>
+            <div class="tabs-content products__content">
+              <div class="product-slider">
+                <div class="product-slider__item">
+                  <a href="#" class="product-item">
+                    <img src="" alt="" class="product-item__img">
+                    <h4 class="product-item__title"></h4>
+                    <p class="price product-ite__price"></p>
+                    <button class="product-item__basket">
+                      <img src="images/basket-white.svg" alt="">
+                    </button>
+                  </a>
+                </div>
+              </div>
+            </div>
             <div class="tabs-content products__content"></div>
             <div class="tabs-content products__content"></div>
             <div class="tabs-content products__content"></div>
