--- a/index.html
+++ b/index.html
@@ -240,39 +240,322 @@
   <section class="products">
     <div class="container">
       <div class="products__inner">
+        <h3 class="product__title">
+          Popular products
+        </h3>
         <div class="tabs-wrapper">
           <div class="tabs products__tabs">
-            <a href="#" class="tab tab--active products__tab">Spare parts</a>
-            <a href="#" class="tab tab--active products__tab">Engines</a>
-            <a href="#" class="tab tab--active products__tab">Tires</a>
-            <a href="#" class="tab tab--active products__tab">Electronics</a>
-            <a href="#" class="tab tab--active products__tab">Tools</a>
-            <a href="#" class="tab tab--active products__tab">Accessories</a>
+            <a href="#" class="tab  products__tab tab--active">Spare parts</a>
+            <a href="#" class="tab products__tab">Engines</a>
+            <a href="#" class="tab products__tab">Tires</a>
+            <a href="#" class="tab products__tab">Electronics</a>
+            <a href="#" class="tab products__tab">Tools</a>
+            <a href="#" class="tab products__tab">Accessories</a>
           </div>
           <div class="tabs-container products__container">
-            <div class="tabs-content products__content tabs-content--active"></div>
-            <div class="tabs-content products__content">
-              <div class="product-slider">
-                <div class="product-slider__item">
-                  <a href="#" class="product-item">
-                    <img src="" alt="" class="product-item__img">
-                    <h4 class="product-item__title"></h4>
-                    <p class="price product-ite__price"></p>
-                    <button class="product-item__basket">
-                      <img src="images/basket-white.svg" alt="">
-                    </button>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="tabs-content products__content"></div>
-            <div class="tabs-content products__content"></div>
-            <div class="tabs-content products__content"></div>
-            <div class="tabs-content products__content"></div>
-          </div>
-        </div>
-      </div>
-    </div>
+            <div class="tabs-content products__content tabs-content--active">
+                <div class="product-slider">
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item product-item--sale">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper product-item__not-available">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item product-item--sale">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper product-item__not-available">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item product-item--sale">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper product-item__not-available">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item product-item--sale">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                </div><!-- .product-slider -->
+              <div class="tabs-content products__content">
+                <div class="product-slider">
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item product-item--sale">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper product-item__not-available">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item product-item--sale">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper product-item__not-available">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item product-item--sale">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                  <div class="product-slider__item">
+                    <div class="product-item__wrapper product-item__not-available">
+                      <button class="product-item__favorite"></button>
+                      <button class="product-item__basket">
+                        <!-- <img src="images/basket-white.svg" alt=""> -->
+                      </button>
+                      <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+                      <a href="#" class="product-item product-item--sale">
+                        <p class="product-item__hover-text">
+                          View product
+                        </p>
+                        <img src="images/content/product-01.png" alt="" class="product-item__img">
+                        <h4 class="product-item__title">
+                          Waterproof bag
+                        </h4>
+                        <p class="price product-item__price">
+                          $144
+                        </p>
+                        <p class="product-item__notify-text">
+                          Not available
+                        </p>
+                      </a>
+                    </div><!-- .product-item__wrapper -->
+                  </div><!-- .product-slider__item -->
+                </div><!-- .product-slider -->
+              </div><!-- .tabs-content products__content -->
+              <div class="tabs-content products__content"></div>
+              <div class="tabs-content products__content"></div>
+              <div class="tabs-content products__content"></div>
+              <div class="tabs-content products__content"></div>
+            </div> <!-- .tabs-container products__container -->
+          </div><!-- .tabs-wrapper -->
+        </div><!-- .products__inner -->
+      </div><!-- .container -->
   </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -281,7 +564,6 @@
 </body>
 
 </html>
-
 
 
 <!-- <div class="tabs-wrapper">
