--- a/index.html
+++ b/index.html
@@ -696,6 +696,396 @@
     </div><!-- .container -->
   </section>
 
+  <div class="banner">
+    <div class="container">
+      <a class="banner-link" href="#">
+        <img src="images/banner.jpg" alt="">
+      </a>
+    </div>
+  </div>
+
+  <section class="products">
+    <div class="container">
+      <div class="products__inner">
+        <h3 class="product__title">
+          Frequently bought together
+        </h3>
+        <div class="tabs-wrapper">
+          <div class="tabs products__tabs">
+            <a class="tab  products__tab tab--active"
+              href="#popular-tab-1">Spare parts</a>
+            <a class="tab products__tab"
+              href="#popular-tab-2">Engines</a>
+            <a class="tab products__tab"
+              href="#popular-tab-3">Tires</a>
+            <a class="tab products__tab"
+              href="#popular-tab-4">Electronics</a>
+            <a class="tab products__tab"
+              href="#popular-tab-5">Tools</a>
+            <a class="tab products__tab"
+              href="#popular-tab-6">Accessories</a>
+          </div>
+          <div class="tabs-container products__container">
+            <div class="tabs-content products__content tabs-content--active"
+              id="popular-tab-1">
+              <div class="product-slider">
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item product-item--sale">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper product-item__not-available">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item product-item--sale">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper product-item__not-available">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item product-item--sale">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper product-item__not-available">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item product-item--sale">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+              </div><!-- .product-slider -->
+            </div>
+            <div class="tabs-content products__content"
+              id="popular-tab-2">
+              <div class="product-slider">
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item product-item--sale">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper product-item__not-available">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item product-item--sale">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper product-item__not-available">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item product-item--sale">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+                <div class="product-slider__item">
+                  <div class="product-item__wrapper product-item__not-available">
+                    <button class="product-item__favorite"></button>
+                    <button class="product-item__basket">
+                      <!-- <img src="images/basket-white.svg" alt=""> -->
+                    </button>
+                    <a href="#"
+                      class="product-item__notify-link"><span>Inform when available</span></a>
+                    <a href="#"
+                      class="product-item product-item--sale">
+                      <p class="product-item__hover-text">
+                        View product
+                      </p>
+                      <img src="images/content/product-01.png"
+                        alt=""
+                        class="product-item__img">
+                      <h4 class="product-item__title">
+                        Waterproof bag
+                      </h4>
+                      <p class="price product-item__price">
+                        $144
+                      </p>
+                      <p class="product-item__notify-text">
+                        Not available
+                      </p>
+                    </a>
+                  </div><!-- .product-item__wrapper -->
+                </div><!-- .product-slider__item -->
+              </div><!-- .product-slider -->
+            </div><!-- .tabs-content products__content -->
+            <div id="popular-tab-3"
+              class="tabs-content products__content">slider-3</div>
+            <div id="popular-tab-4"
+              class="tabs-content products__content">slider-4</div>
+            <div id="popular-tab-5"
+              class="tabs-content products__content">slider-5</div>
+            <div id="popular-tab-6"
+              class="tabs-content products__content">slider-6</div>
+          </div> <!-- .tabs-container products__container -->
+        </div><!-- .tabs-wrapper -->
+      </div><!-- .products__inner -->
+    </div><!-- .container -->
+  </section>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
