--- a/product-page.html
+++ b/product-page.html
@@ -3,23 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-    content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible"
-    content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>DRIVE MOTO</title>
-  <link rel="stylesheet"
-    href="css/normalize.css">
-  <link rel="stylesheet"
-    href="css/slick.css">
-  <link rel="stylesheet"
-    href="css/fonts.css">
-  <link rel="preconnect"
-    href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet"
-    href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="css/ion.rangeSlider.min.css">
+  <link rel="stylesheet" href="css/jquery.formstyler.css">
+  <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
+  <link rel="stylesheet" href="css/jquery.rateyo.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -30,30 +26,24 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#"
-                  class="menu__link">
+                <a href="#" class="menu__link">
                   Stores
                 </a>
               </li>
               <li class="menu__item">
-                <a href="#"
-                  class="menu__link">
+                <a href="#" class="menu__link">
                   Promos
                 </a>
               </li>
               <li class="menu__item">
-                <a href="#"
-                  class="menu__link">
+                <a href="#" class="menu__link">
                   Delivery & payment
                 </a>
               </li>
             </ul>
           </nav>
-          <a href="#"
-            class="logo">
-            <img class="logo__img"
-              src="images/logo.svg"
-              alt="">
+          <a href="#" class="logo">
+            <img class="logo__img" src="images/logo.svg" alt="">
           </a>
           <div class="header__box">
             <p class="header__address">
@@ -61,24 +51,18 @@
             </p>
             <ul class="user-list">
               <li class="user-list__item">
-                <a href="#"
-                  class="user-list__link">
-                  <img src="images/heart.svg"
-                    alt="">
+                <a href="#" class="user-list__link">
+                  <img src="images/heart.svg" alt="">
                 </a>
               </li>
               <li class="user-list__item">
-                <a href="#"
-                  class="user-list__link">
-                  <img src="images/user.svg"
-                    alt="">
+                <a href="#" class="user-list__link">
+                  <img src="images/user.svg" alt="">
                 </a>
               </li>
               <li class="user-list__item">
-                <a href="#"
-                  class="user-list__link basket">
-                  <img src="images/basket.svg"
-                    alt="">
+                <a href="#" class="user-list__link basket">
+                  <img src="images/basket.svg" alt="">
                   <p class="basket__num">1</p>
                 </a>
               </li>
@@ -91,38 +75,29 @@
       <div class="container">
         <ul class="menu-categories">
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Quad bikes</a>
+            <a href="#" class="menu-categories__link">Quad bikes</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Jetboats</a>
+            <a href="#" class="menu-categories__link">Jetboats</a>
           </li>
           <li class="menu-categories__item">
-            <img src="images/"
-              alt="">
-            <a href="#"
-              class="menu-categories__link">Jetskis</a>
+            <img src="images/" alt="">
+            <a href="#" class="menu-categories__link">Jetskis</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Boats</a>
+            <a href="#" class="menu-categories__link">Boats</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Off-roaders</a>
+            <a href="#" class="menu-categories__link">Off-roaders</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Snowmobiles</a>
+            <a href="#" class="menu-categories__link">Snowmobiles</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Engines</a>
+            <a href="#" class="menu-categories__link">Engines</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Spare parts</a>
+            <a href="#" class="menu-categories__link">Spare parts</a>
           </li>
         </ul>
       </div>
@@ -222,6 +197,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/ion.rangeSlider.min.js"></script>
+  <script src="js/jquery.formstyler.min.js"></script>
+  <script src="js/jquery.rateyo.min.js"></script>
 </body>
 
 </html>
