added jquery plugins, fixed property wrapping

--- a/catalog.html
+++ b/catalog.html
@@ -26,30 +26,24 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#"
-                  class="menu__link">
+                <a href="#" class="menu__link">
                   Stores
                 </a>
               </li>
               <li class="menu__item">
-                <a href="#"
-                  class="menu__link">
+                <a href="#" class="menu__link">
                   Promos
                 </a>
               </li>
               <li class="menu__item">
-                <a href="#"
-                  class="menu__link">
+                <a href="#" class="menu__link">
                   Delivery & payment
                 </a>
               </li>
             </ul>
           </nav>
-          <a href="#"
-            class="logo">
-            <img class="logo__img"
-              src="images/logo.svg"
-              alt="">
+          <a href="#" class="logo">
+            <img class="logo__img" src="images/logo.svg" alt="">
           </a>
           <div class="header__box">
             <p class="header__address">
@@ -57,24 +51,18 @@
             </p>
             <ul class="user-list">
               <li class="user-list__item">
-                <a href="#"
-                  class="user-list__link">
-                  <img src="images/heart.svg"
-                    alt="">
+                <a href="#" class="user-list__link">
+                  <img src="images/heart.svg" alt="">
                 </a>
               </li>
               <li class="user-list__item">
-                <a href="#"
-                  class="user-list__link">
-                  <img src="images/user.svg"
-                    alt="">
+                <a href="#" class="user-list__link">
+                  <img src="images/user.svg" alt="">
                 </a>
               </li>
               <li class="user-list__item">
-                <a href="#"
-                  class="user-list__link basket">
-                  <img src="images/basket.svg"
-                    alt="">
+                <a href="#" class="user-list__link basket">
+                  <img src="images/basket.svg" alt="">
                   <p class="basket__num">1</p>
                 </a>
               </li>
@@ -87,38 +75,29 @@
       <div class="container">
         <ul class="menu-categories">
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Quad bikes</a>
+            <a href="#" class="menu-categories__link">Quad bikes</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Jetboats</a>
+            <a href="#" class="menu-categories__link">Jetboats</a>
           </li>
           <li class="menu-categories__item">
-            <img src="images/"
-              alt="">
-            <a href="#"
-              class="menu-categories__link">Jetskis</a>
+            <img src="images/" alt="">
+            <a href="#" class="menu-categories__link">Jetskis</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Boats</a>
+            <a href="#" class="menu-categories__link">Boats</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Off-roaders</a>
+            <a href="#" class="menu-categories__link">Off-roaders</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Snowmobiles</a>
+            <a href="#" class="menu-categories__link">Snowmobiles</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Engines</a>
+            <a href="#" class="menu-categories__link">Engines</a>
           </li>
           <li class="menu-categories__item">
-            <a href="#"
-              class="menu-categories__link">Spare parts</a>
+            <a href="#" class="menu-categories__link">Spare parts</a>
           </li>
         </ul>
       </div>
@@ -191,7 +170,7 @@
             <div class="tabs-container">
               <div id="tab-1" class="tabs-content  tabs-content--active aside-filter__tabs-content"></div>
               <div id="tab-1" class="tabs-content aside-filter__tabs-content"></div>
-          </div>
+            </div>
         </aside>
         <div class="catalog__inner-list">
           <div class="product-item__wrapper">
@@ -199,16 +178,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -225,16 +200,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item product-item--sale">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item product-item--sale">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -251,16 +222,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -277,16 +244,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item product-item--sale">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item product-item--sale">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -303,16 +266,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -329,16 +288,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item product-item--sale">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item product-item--sale">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -355,16 +310,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -381,16 +332,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item product-item--sale">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item product-item--sale">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -407,16 +354,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -433,16 +376,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item product-item--sale">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item product-item--sale">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -459,16 +398,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
@@ -485,16 +420,12 @@
             <button class="product-item__basket">
               <!-- <img src="images/basket-white.svg" alt=""> -->
             </button>
-            <a href="#"
-              class="product-item__notify-link"><span>Inform when available</span></a>
-            <a href="#"
-              class="product-item product-item--sale">
+            <a href="#" class="product-item__notify-link"><span>Inform when available</span></a>
+            <a href="#" class="product-item product-item--sale">
               <p class="product-item__hover-text">
                 View product
               </p>
-              <img src="images/content/jetski-01.png"
-                alt=""
-                class="product-item__img">
+              <img src="images/content/jetski-01.png" alt="" class="product-item__img">
               <h4 class="product-item__title">
                 Jetski BRP SeaDoo GTI 130hp SE Black\Mango
               </h4>
