fixed tabs on catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -164,8 +164,8 @@
         <aside class="catalog__inner-aside aside-filter">
           <div class="tabs-wrapper">
             <div class="tabs aside-filter__tabs">
-              <a href="#tab-1" class="tab aside-filter__tab tab--active"><span>Параметры</span></a>
-              <a href="#tab-2" class="tab aside-filter__tab"><span>По марке</span></a>
+              <a href="#tab-1" class="tab aside-filter__tab tab--active"><span>Parameters</span></a>
+              <a href="#tab-2" class="tab aside-filter__tab"><span>By Brand</span></a>
             </div>
             <div class="tabs-container">
               <div id="tab-1" class="tabs-content  tabs-content--active aside-filter__tabs-content">
