--- a/product-page.html
+++ b/product-page.html
@@ -120,6 +120,19 @@
     </div>
   </div>
 
+  <section class="product-card">
+    <div class="container">
+      <div class="product-card__inner">
+        <div class="product-card__img-box">
+
+        </div>
+        <div class="product-card__content">
+          
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
   <footer class="footer">
