added product card

--- a/product-page.html
+++ b/product-page.html
@@ -123,14 +123,92 @@
   <section class="product-card">
     <div class="container">
       <div class="product-card__inner">
-        <div class="product-card__img-box">
-
-        </div>
+        <div class="product-card__img-box product-item--sale">
+          <img src="images/content/jetski-large.png" alt="Jetski large" class="product-card__img">
+          <p class="product-card__price-old">
+            $15999
+          </p>
+          <p class="product-card__price-new">
+            $14599
+          </p>
+          <a href="#" class="product-card__link">Found cheaper? We will lower the price!</a>
+        </div><!-- .product-card__img-box -->
         <div class="product-card__content">
-          
-        </div>
-      </div>
-    </div>
+          <h1 class="product-card__title">Jetski BRP SeaDoo GTI 155hp SE Long Blue Metallic</h1>
+          <p class="product-card__code"> Product code: 366666-2</p>
+          <div class="product-card__buttons">
+            <button class="prodcut-card__icon-favorite">
+              <img src="images/heart.svg" alt="">
+            </button>
+            <button class="prodcut-card__icon-comparison">
+              <img src="images/comparison.svg" alt="">
+            </button>
+            <div class="rate">
+
+            </div>
+          </div><!-- .product-card__buttons -->
+
+          <div class="tabs-wrapper product-card__tabs">
+            <div class="tabs">
+              <a href="#tab-1" class="tab product-card__tab tab--active">Specifications</a>
+              <a href="#tab-2" class="tab product-card__tab">Availability in store</a>
+            </div>
+            <div class="tabs-container">
+              <div id="tab-1" class="tabs-content product-card__tab-content tabs-content--active">
+                <ul class="product-card__list">
+                  <li class="product-card__item">
+                    <div class="product-card__item-left">
+                      Country
+                    </div>
+                    <div class="product-card__item-right">
+                      Canada
+                    </div>
+                  </li>
+                  <li class="product-card__item">
+                    <div class="product-card__item-left">
+                      Number of seats
+                    </div>
+                    <div class="product-card__item-right">
+                      3
+                    </div>
+                  </li>
+                  <li class="product-card__item">
+                    <div class="product-card__item-left">
+                      Power, h.p.
+                    </div>
+                    <div class="product-card__item-right">
+                      155
+                    </div>
+                  </li>
+                  <li class="product-card__item">
+                    <div class="product-card__item-left">
+                      Engine type
+                    </div>
+                    <div class="product-card__item-right">
+                      Petrol
+                    </div>
+                  </li>
+                  <li class="product-card__item">
+                    <div class="product-card__item-left">
+                      Year of production
+                    </div>
+                    <div class="product-card__item-right">
+                      2020
+                    </div>
+                  </li>
+                </ul>
+                <a href="#" class="product-card__more">See more</a>
+                <button class="product-card__btn">Buy</button>
+              </div>
+              <div id="tab-2" class="tabs-content product-card__tab-content">
+                Content 2
+              </div>
+            </div><!-- .tabs-container -->
+          </div><!-- .tabs-wrapper product-card__tabs -->
+
+        </div><!-- .product-card__content -->
+      </div><!-- .product-card__inner -->
+    </div><!-- .container -->
   </section>
 
 
